text wrapping around image bug fix

--- a/src/components/chat-message/chat-message.scss
+++ b/src/components/chat-message/chat-message.scss
@@ -16,6 +16,10 @@
     }
   }
 
+  .message {
+    overflow: hidden;
+  }
+
   // needed to align everything correctly
   & > div {
     padding: 1px;
